Fix the overlapping text in the Disclaimer

--- a/src/Components/Disclaimer/Disclaimer.css
+++ b/src/Components/Disclaimer/Disclaimer.css
@@ -6,3 +6,7 @@
   line-height: 1.6;
   letter-spacing: 0.0075em;
 }
+
+.top-bottom-margin {
+  margin: 0.25rem 0 0.25rem 0;
+}
